--- a/src/app/modules/admin/components/view-task-details/view-task-details.component.scss
+++ b/src/app/modules/admin/components/view-task-details/view-task-details.component.scss
@@ -250,8 +250,8 @@
     
     .comment-content{
         font-size: 1rem;
-        padding: 10px;
-        margin: 10px 0;
+        padding: 10px 10px 15px 28px;
+        margin: 10px 0 10px 15px;
     }
     
       
