--- a/src/app/modules/admin/components/dashboard/dashboard.component.scss
+++ b/src/app/modules/admin/components/dashboard/dashboard.component.scss
@@ -1,15 +1,12 @@
-
-
-  
 .container{
     padding: 2rem 1rem;
     background: #f9f9f9;
     .title{
-        font-size: 1.5rem;
+        font-size: 1.2rem;
         margin-bottom: 5px;
-        color: #333;
+        color: #1e1e1e;
         text-align: start;
-        padding: 0 1.5rem;
+        padding: 0 1rem;
         font-weight: bold;
     }
     .search-form{
@@ -79,7 +76,7 @@
                 font-size: 1.25rem;
                 font-weight: bold;
                 margin: 0 0 0.5rem;
-                color: #3f51b5;
+                color: #1e1e1e;
                 word-wrap: break-word;
                 }
         
