--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,7 +3,7 @@ body, html {
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: floralwhite;
+    background-color: aliceblue;
   }
   
   // Make sure app-root stretches to full height
