--- a/src/app/modules/admin/components/dashboard/dashboard.component.scss
+++ b/src/app/modules/admin/components/dashboard/dashboard.component.scss
@@ -1,6 +1,6 @@
 .container{
-    padding: 2rem 1rem;
-    background: #f9f9f9;
+    padding: 2rem 2rem;
+    background: aliceblue;
     .title{
         font-size: 1.2rem;
         margin-bottom: 5px;
