--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,4 +5,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { background-color: aliceblue; margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
